--- a/app/Src/EditTemplateScreen.fx.yaml
+++ b/app/Src/EditTemplateScreen.fx.yaml
@@ -13,6 +13,65 @@ EditTemplateScreen As screen:
         Y: =92
         ZIndex: =3
 
+        "'html _DataCard2' As typedDataCard.richTextEditorEditCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="html"
+            Default: =ThisItem.'html '
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"html")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =476
+            Required: =false
+            Update: =DataCardValue28.HtmlText
+            Width: =910
+            X: =0
+            Y: =1
+            ZIndex: =1
+
+            DataCardKey31 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =180
+                Wrap: =false
+                X: =30
+                Y: =10 + (DataCardValue28.Height / 2) - (Self.Height / 2)
+                ZIndex: =1
+
+            DataCardValue28 As richTextEditor:
+                Default: =Parent.Default
+                DisplayMode: =Parent.DisplayMode
+                Height: =450
+                Width: =653
+                X: =225
+                Y: =10
+                ZIndex: =2
+
+            ErrorMessage31 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue28.Y + DataCardValue28.Height
+                ZIndex: =3
+
+            StarVisible31 As label:
+                Align: =Align.Center
+                Height: =DataCardKey31.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey31.Y
+                ZIndex: =4
+
         Title_DataCard3 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="Title"
@@ -33,7 +92,7 @@ EditTemplateScreen As screen:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
-                Width: =80
+                Width: =180
                 Wrap: =false
                 X: =30
                 Y: =10 + (DataCardValue15.Height / 2) - (Self.Height / 2)
@@ -51,8 +110,8 @@ EditTemplateScreen As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =727
-                X: =153
+                Width: =653
+                X: =225
                 Y: =10
                 ZIndex: =2
 
@@ -80,65 +139,6 @@ EditTemplateScreen As screen:
                 Wrap: =false
                 Y: =DataCardKey15.Y
                 ZIndex: =4
-
-        "'html _DataCard1' As typedDataCard.textualEditCard":
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="html"
-            Default: =ThisItem.'html '
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"html")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =483
-            MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "html")
-            Required: =false
-            Update: =RichTextEditor3.HtmlText
-            Width: =910
-            X: =0
-            Y: =1
-            ZIndex: =4
-
-            DataCardKey16 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: ="Editor"
-                Width: =80
-                Wrap: =false
-                X: =30
-                Y: =10 + (RichTextEditor3.Height / 2) - (Self.Height / 2)
-                ZIndex: =1
-
-            ErrorMessage16 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =RichTextEditor3.Y + RichTextEditor3.Height
-                ZIndex: =3
-
-            StarVisible16 As label:
-                Align: =Align.Center
-                Height: =DataCardKey16.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey16.Y
-                ZIndex: =4
-
-            RichTextEditor3 As richTextEditor:
-                Default: =Parent.Default
-                Height: =437
-                Width: =731
-                X: =150
-                Y: =20
-                ZIndex: =5
 
     Button11_2 As button:
         OnSelect: |-
