--- a/app/Src/ImportExcelData.fx.yaml
+++ b/app/Src/ImportExcelData.fx.yaml
@@ -403,3 +403,15 @@ ImportExcelData As screen:
         Y: =38
         ZIndex: =8
 
+    Button10_1 As button:
+        Fill: =RGBA(255, 0, 0, 1)
+        FontWeight: =FontWeight.Bold
+        Height: =49
+        HoverFill: =ColorFade(Self.BorderColor, 20%)
+        OnSelect: =RemoveIf(TestList, true);
+        Text: ="Delete all"
+        Width: =258
+        X: =696
+        Y: =38
+        ZIndex: =9
+
