--- a/app/Src/ImportExcelData.fx.yaml
+++ b/app/Src/ImportExcelData.fx.yaml
@@ -404,11 +404,12 @@ ImportExcelData As screen:
         ZIndex: =8
 
     Button10_1 As button:
+        DisplayMode: =If(!IsBlank(TestList), DisplayMode.Edit, DisplayMode.Disabled)
         Fill: =RGBA(255, 0, 0, 1)
         FontWeight: =FontWeight.Bold
         Height: =49
         HoverFill: =ColorFade(Self.BorderColor, 20%)
-        OnSelect: =RemoveIf(TestList, true);
+        OnSelect: =RemoveIf(TestList, true)
         Text: ="Delete all"
         Width: =258
         X: =696
