--- a/app/Src/CampaignScreen.fx.yaml
+++ b/app/Src/CampaignScreen.fx.yaml
@@ -1,5 +1,7 @@
 CampaignScreen As screen:
-    OnVisible: =Set(varCurrentCampaign, Blank());
+    OnVisible: |-
+        =Set(varCurrentCampaign, Blank());
+        Set(varMenuIsOpen, Blank());
 
     "ExistingCampaignGallery As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver4.0'":
         Height: =414
@@ -167,9 +169,22 @@ CampaignScreen As screen:
         ZIndex: =9
 
     Icon4 As icon.Hamburger:
+        Height: =48
         Icon: =Icon.Hamburger
         OnSelect: =Set(varMenuIsOpen, true);
+        Width: =48
         X: =40
-        Y: =40
+        Y: =20
         ZIndex: =10
+
+    Container4 As groupContainer.manualLayoutContainer:
+        Height: =Parent.Height - 80
+        Visible: =varMenuIsOpen
+        Width: =220
+        X: =20
+        Y: =40
+        ZIndex: =11
+
+        NavMenu_1 As NavMenu:
+            Width: =220
 
