--- a/app/Src/ImportExcelDataScreen.fx.yaml
+++ b/app/Src/ImportExcelDataScreen.fx.yaml
@@ -1,6 +1,7 @@
-ImportExcelData As screen:
+ImportExcelDataScreen As screen:
     OnVisible: |-
-        =Refresh(TestList);
+        =Set(varMenuIsOpen, Blank());
+        Refresh(TestList);
         Set(varTestListItem, Blank());
         Set(varAttachment, Blank());
 
@@ -25,7 +26,7 @@ ImportExcelData As screen:
             If(!IsBlank(varResponse), Refresh(TestList));
             Set(varAttachment, Blank())
         Text: ="Import data"
-        X: =496
+        X: =517
         Y: =38
         ZIndex: =3
 
@@ -41,7 +42,7 @@ ImportExcelData As screen:
         PaddingTop: =5
         Tooltip: =
         Width: =333
-        X: =130
+        X: =151
         Y: =38
         ZIndex: =5
 
@@ -71,7 +72,7 @@ ImportExcelData As screen:
             OnSelect: |-
                 =Select(Parent);
                 Set(varTestListItem, RecepientGallery.Selected);
-                Navigate(FormExcelData);
+                Navigate(FormExcelDataScreen);
             PaddingBottom: =10
             PaddingLeft: =10
             PaddingRight: =10
@@ -396,7 +397,7 @@ ImportExcelData As screen:
         HoverFill: =ColorFade(Self.BorderColor, 20%)
         OnSelect: |-
             =Set(varTestListItem, Blank());
-            Navigate(FormExcelData);
+            Navigate(FormExcelDataScreen);
         Text: ="Create new item"
         Width: =258
         X: =1011
@@ -412,7 +413,27 @@ ImportExcelData As screen:
         OnSelect: =RemoveIf(TestList, true)
         Text: ="Delete all"
         Width: =258
-        X: =696
+        X: =717
         Y: =38
         ZIndex: =9
+
+    Icon4_4 As icon.Hamburger:
+        Height: =48
+        Icon: =Icon.Hamburger
+        OnSelect: =Set(varMenuIsOpen, true);
+        Width: =48
+        X: =40
+        Y: =20
+        ZIndex: =10
+
+    Container4_2 As groupContainer.manualLayoutContainer:
+        Height: =Parent.Height - 80
+        Visible: =varMenuIsOpen
+        Width: =220
+        X: =20
+        Y: =40
+        ZIndex: =11
+
+        NavMenu_3 As NavMenu:
+            Width: =220
 
