--- a/app/Src/TemplatesScreen.fx.yaml
+++ b/app/Src/TemplatesScreen.fx.yaml
@@ -1,5 +1,5 @@
 TemplatesScreen As screen:
-    OnVisible: =
+    OnVisible: =Set(varMenuIsOpen, Blank());
 
     Icon3 As icon.Reload:
         Color: =RGBA(56, 96, 178, 1)
@@ -149,4 +149,24 @@ TemplatesScreen As screen:
         X: =474
         Y: =30
         ZIndex: =9
+
+    Icon4_3 As icon.Hamburger:
+        Height: =48
+        Icon: =Icon.Hamburger
+        OnSelect: =Set(varMenuIsOpen, true);
+        Width: =48
+        X: =40
+        Y: =20
+        ZIndex: =10
+
+    Container4_1 As groupContainer.manualLayoutContainer:
+        Height: =Parent.Height - 80
+        Visible: =varMenuIsOpen
+        Width: =220
+        X: =20
+        Y: =40
+        ZIndex: =11
+
+        NavMenu_2 As NavMenu:
+            Width: =220
 
