--- a/app/Src/CampaignScreen.fx.yaml
+++ b/app/Src/CampaignScreen.fx.yaml
@@ -179,7 +179,7 @@ CampaignScreen As screen:
 
     Container4 As groupContainer.manualLayoutContainer:
         Height: =Parent.Height - 80
-        Visible: =varMenuIsOpen
+        Visible: =NavMenu_1.IsMenuOpen
         Width: =220
         X: =20
         Y: =40
