--- a/app/Src/App.fx.yaml
+++ b/app/Src/App.fx.yaml
@@ -2,7 +2,7 @@ App As appinfo:
     BackEnabled: =false
     OnStart: |-
         =Set(varMenuItems, Table(
-            {Title: "Campaings List", Screen: TemplatesScreen}, 
+            {Title: "Campaings List", Screen: CampaignScreen}, 
             {Title: "Templates List", Screen: TemplatesScreen},
             {Title: "Recipient List", Screen: ImportExcelDataScreen}
         ));
