--- a/app/Src/ImportExcelDataScreen.fx.yaml
+++ b/app/Src/ImportExcelDataScreen.fx.yaml
@@ -67,8 +67,9 @@ ImportExcelDataScreen As screen:
 
         NextArrow1 As icon.ChevronRight:
             AccessibleLabel: =Self.Tooltip
+            Color: =RGBA(56, 96, 178, 1)
             Height: =60
-            Icon: =Icon.ChevronRight
+            Icon: =Icon.Edit
             OnSelect: |-
                 =Select(Parent);
                 Set(varTestListItem, RecepientGallery.Selected);
@@ -374,8 +375,7 @@ ImportExcelDataScreen As screen:
 
         NextArrow1_1 As icon.ChevronRight:
             AccessibleLabel: =Self.Tooltip
-            Color: =RGBA(255, 255, 255, 1)
-            Fill: =RGBA(255, 0, 0, 1)
+            Color: =RGBA(255, 0, 0, 1)
             Height: =60
             Icon: =Icon.Trash
             OnSelect: |-
