--- a/app/Src/ImportExcelDataScreen.fx.yaml
+++ b/app/Src/ImportExcelDataScreen.fx.yaml
@@ -67,9 +67,8 @@ ImportExcelDataScreen As screen:
 
         NextArrow1 As icon.ChevronRight:
             AccessibleLabel: =Self.Tooltip
-            Color: =RGBA(56, 96, 178, 1)
             Height: =60
-            Icon: =Icon.Edit
+            Icon: =Icon.ChevronRight
             OnSelect: |-
                 =Select(Parent);
                 Set(varTestListItem, RecepientGallery.Selected);
@@ -373,7 +372,7 @@ ImportExcelDataScreen As screen:
                     Y: =ProjectValue.Y + ProjectValue.Height + 4
                     ZIndex: =2
 
-        NextArrow1_1 As icon.ChevronRight:
+        Delete1_1 As icon.ChevronRight:
             AccessibleLabel: =Self.Tooltip
             Color: =RGBA(255, 0, 0, 1)
             Height: =60
@@ -381,7 +380,7 @@ ImportExcelDataScreen As screen:
             OnSelect: |-
                 =Select(Parent);
                 Set(varTestListItem, RecepientGallery.Selected);
-                RemoveIf(TestList, RoleID = varTestListItem.RoleID);
+                RemoveIf(TestList, ID = varTestListItem.ID);
                 Refresh(TestList);
             PaddingBottom: =10
             PaddingLeft: =10
