--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -321,9 +321,10 @@ EditCampaignScreen As screen:
     Button1 As button:
         Height: =55
         OnSelect: =SendEmailFlow.Run(ExistingCampaignGallery.Selected.Template.Id, ExistingCampaignGallery.Selected.Subject,ExistingCampaignGallery.Selected.'Message (html)');
-        Text: ="Send Test"
-        X: =1161
-        Y: =450
+        Text: ="Send to Contacts"
+        Width: =223
+        X: =1116
+        Y: =572
         ZIndex: =15
 
     DeletePopup_2 As group:
@@ -385,11 +386,4 @@ EditCampaignScreen As screen:
             X: =490
             Y: =173
             ZIndex: =14
-
-    Button2 As button:
-        Height: =53
-        Text: ="Send to contacts"
-        X: =1161
-        Y: =536
-        ZIndex: =16
 
